# shack-amqp-monitor

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  http.rs  main.rs  prom.rs
